# physmarch

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-RU.md  README.md  minimal_shell.html  shell.nix
include/: EBO.h  UBO.h  VAO.h  VBO.h  glad.h  http_request.h  imgui_renderer.h  networking.h  object.h  scene.h  shaderClass.h
resources/: main.frag
src/: UBO.cpp  glad.c  http_request.cpp  imgui_renderer.cpp  main.cpp  networking.cpp  object.cpp  scene.cpp  shaderClass.cpp
